[package]
name = "window_titles"
version = "0.1.1"
authors = ["Hiruna Jayamanne <hiru@hiru.dev>"]
edition = "2018"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.2"

[[bin]]
name = "basic"
path = "examples/basic.rs"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winnt", "winuser", "minwindef"] }
